--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -208,7 +208,7 @@
     <string name="redo">Wiederholen</string>
 
     <!-- Sorting -->
-    <string name="sort_by">Sortieren nach</string>
+    <string name="sort_by">Sortieren nach...</string>
     <string name="name">Name</string>
     <string name="size">Größe</string>
     <string name="last_modified">Änderungsdatum</string>
