--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,7 @@
     <string name="file_saved">文件保存成功</string>
     <string name="invalid_file_format">无效文件格式</string>
     <string name="out_of_memory_error">内存不足</string>
-    <string name="an_error_occurred">啊哦，出错啦: %s</string>
+    <string name="an_error_occurred">啊哦，出错啦： %s</string>
     <string name="open_with">打开方式</string>
     <string name="no_app_found">未找到可用应用</string>
     <string name="set_as">设置为</string>
