adding a new string for Label

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">المفضلة</string>
