--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">S\'està eliminant la carpeta \'%s\'</string>
     <string name="none">Cap</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferits</string>
