--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Notizen</string>
     <string name="deleting_folder">Lösche Ordner \'%s\'</string>
     <string name="none">nichts</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriten</string>
