--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Σημειώσεις</string>
     <string name="deleting_folder">Διαγραφή φακέλου \'%s\'</string>
     <string name="none">Χωρίς</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Αγαπημένα</string>
