--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Note</string>
     <string name="deleting_folder">Eliminazione cartella \'%s\'</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
