--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">Sletter mappen \'%s\'</string>
     <string name="none">Ingen</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritter</string>
