--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Notities</string>
     <string name="deleting_folder">Map \'%s\' verwijderen</string>
     <string name="none">Geen</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
