--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Notas</string>
     <string name="deleting_folder">A apagar a pasta \'%s\'</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
