--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Заметки</string>
     <string name="deleting_folder">Удаление папки \"%s\"</string>
     <string name="none">Нет</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Избранное</string>
