--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Anteckningar</string>
     <string name="deleting_folder">Tar bort mappen \'%s\'</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriter</string>
