--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Notlar</string>
     <string name="deleting_folder">\'%s\' klasörü siliniyor</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriler</string>
