--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">笔记</string>
     <string name="deleting_folder">正在删除目录 \'%s\'</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">收藏</string>
