--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">筆記</string>
     <string name="deleting_folder">資料夾 \'%s\' 刪除中</string>
     <string name="none">無</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">我的最愛</string>
