--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Qeydlər</string>
     <string name="deleting_folder">\'%s\' qovluğu silinir</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Sevimlilər</string>
