--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Noter</string>
     <string name="deleting_folder">Sletter mappen \'%s\'</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Bogmærker</string>
