--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">Supprimer le dossier \'%s\'</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoris</string>
