--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">メモ</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
     <string name="none">None</string>
+    <string name="label">Label</string>
 
     <!-- Favorites -->
     <string name="favorites">お気に入り</string>
