--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -17,6 +17,7 @@
     <string name="notes">Poznámky</string>
     <string name="deleting_folder">Odstraňuje sa priečinok \'%s\'</string>
     <string name="none">Žiadny</string>
+    <string name="label">Štítok</string>
 
     <!-- Favorites -->
     <string name="favorites">Obľúbené</string>
