--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -17,8 +17,9 @@
     <string name="notes">Σημειώσεις</string>
     <string name="deleting_folder">Διαγραφή φακέλου \'%s\'</string>
     <string name="none">Χωρίς</string>
-
-    <!-- Favorites -->
+    <string name="label">Ετικέτα</string>
+    
+       <!-- Favorites -->
     <string name="favorites">Αγαπημένα</string>
     <string name="add_favorites">Προσθήκη αγαπημένων</string>
     <string name="add_to_favorites">Προσθήκη στα αγαπημένα</string>
