--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -16,8 +16,8 @@
     <string name="details">Dettagli</string>
     <string name="notes">Note</string>
     <string name="deleting_folder">Eliminazione cartella \'%s\'</string>
-    <string name="none">None</string>
-    <string name="label">Label</string>
+    <string name="none">Nessuno</string>
+    <string name="label">Etichetta</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
