--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -10,14 +10,14 @@
     <string name="no_app_found">Nema odgovarajuće aplikacije</string>
     <string name="set_as">Postavi kao</string>
     <string name="value_copied_to_clipboard">Vrijednost spremljena u međuspremnik</string>
-    <string name="unknown">Unknown</string>
-    <string name="always">Always</string>
-    <string name="never">Never</string>
-    <string name="details">Details</string>
-    <string name="notes">Notes</string>
-    <string name="deleting_folder">Deleting folder \'%s\'</string>
-    <string name="none">None</string>
-    <string name="label">Label</string>
+    <string name="unknown">Nepoznato</string>
+    <string name="always">Uvijek</string>
+    <string name="never">Nikad</string>
+    <string name="details">Detalji</string>
+    <string name="notes">Bilješke</string>
+    <string name="deleting_folder">Brisanje mape \'%s\'</string>
+    <string name="none">Nijedan</string>
+    <string name="label">Označi</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriti</string>
@@ -27,18 +27,18 @@
 
     <!-- Search -->
     <string name="search">Traži</string>
-    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
+    <string name="type_2_characters">Upiši najmanje 2 znaka za početak pretraživanja.</string>
 
     <!-- Filters -->
-    <string name="filter">Filter</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="filter">Filtar</string>
+    <string name="no_items_found">Nijedna stavka nije pronađena.</string>
+    <string name="change_filter">Promijeni filtar</string>
 
     <!-- Permissions -->
-    <string name="no_storage_permissions">Potrebna je dozvola za prostor za pohranu</string>
-    <string name="no_contacts_permission">Potrebna je dozvola za kontakte</string>
-    <string name="no_camera_permissions">Potrebna je dozvola za kameru</string>
-    <string name="no_audio_permissions">Potrebna je dozvola za zvuk</string>
+    <string name="no_storage_permissions">Potrebno je dopuštenje za prostor za pohranu</string>
+    <string name="no_contacts_permission">Potrebno je dopuštenje za kontakte</string>
+    <string name="no_camera_permissions">Potrebno je dopuštenje za kameru</string>
+    <string name="no_audio_permissions">Potrebno je dopuštenje za zvuk</string>
 
     <!-- Renaming -->
     <string name="rename_file">Preimenuj datoteku</string>
@@ -52,9 +52,9 @@
     <string name="renaming_folder">Preimenovanje direktorija</string>
     <string name="filename_cannot_be_empty">Naziv datoteke ne smije biti prazan</string>
     <string name="filename_invalid_characters">Naziv datoteke sadrži ne podržane znakove</string>
-    <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid characters</string>
+    <string name="filename_invalid_characters_placeholder">Naziv datoteke \'%s\' sadrži nevažeće znakove</string>
     <string name="extension_cannot_be_empty">Ekstenzija ne smije biti prazna</string>
-    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
+    <string name="source_file_doesnt_exist">Izvorišna datoteka %s ne postoji</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiraj</string>
@@ -95,8 +95,8 @@
     <!-- File operation conflicts -->
     <string name="file_already_exists">Datoteka \"%s\" već postoji</string>
     <string name="file_already_exists_overwrite">Datoteka \"%s\" već postoji. Presnimiti?</string>
-    <string name="folder_already_exists">Folder \"%s\" already exists</string>
-    <string name="merge">Merge</string>
+    <string name="folder_already_exists">Mapa \"%s\" već postoji</string>
+    <string name="merge">Spoji</string>
     <string name="overwrite">Presnimi</string>
     <string name="skip">Preskoči</string>
     <string name="append">Dodaj s \'_1\'</string>
@@ -118,15 +118,15 @@
 
     <!-- Are you sure you want to delete 5 items? -->
     <plurals name="delete_items">
-        <item quantity="one">%d item</item>
-        <item quantity="few">%d items</item>
-        <item quantity="other">%d items</item>
+        <item quantity="one">%d stavka</item>
+        <item quantity="few">%d stavke</item>
+        <item quantity="other">%d stavki</item>
     </plurals>
 
     <plurals name="deleting_items">
-        <item quantity="one">Deleting %d item</item>
-        <item quantity="few">Deleting %d items</item>
-        <item quantity="other">Deleting %d items</item>
+        <item quantity="one">Deleting %d stavke</item>
+        <item quantity="few">Deleting %d stavki</item>
+        <item quantity="other">Deleting %d stavki</item>
     </plurals>
 
     <!-- Storages -->
@@ -135,9 +135,9 @@
     <string name="sd_card">SD kartica</string>
     <string name="root">Root</string>
     <string name="wrong_root_selected">Odabran je pogrešan direktorij, molimo odaberite root direktorij Vaše SD kartice</string>
-    <string name="sd_card_otg_same">SD card and OTG device paths cannot be the same</string>
-    <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
-        It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
+    <string name="sd_card_otg_same">SD kartice i OTG putevi uređaja ne mogu biti isti</string>
+    <string name="app_on_sd_card">Čini se da je aplikacija instalirana na SD karticu, što čini widgete aplikacije nedostupnim. Nećete ih čak ni vidjeti na popisu dostupnih widgeta.
+        To je ograničenje sustava, pa ako želite upotrebljavati widgete, morate vratiti aplikaciju na unutarnju pohranu..</string>
 
     <!-- File properties -->
     <string name="properties">Svojstva</string>
@@ -155,18 +155,18 @@
     <string name="f_number">F-broj</string>
     <string name="camera">Kamera</string>
     <string name="exif">EXIF</string>
-    <string name="song_title">Song title</string>
+    <string name="song_title">Naziv pjesme</string>
 
     <!-- Color customization -->
     <string name="background_color">Boja pozadine</string>
     <string name="text_color">Boja teksta</string>
     <string name="primary_color">Primarna boja</string>
-    <string name="foreground_color">Foreground color</string>
-    <string name="app_icon_color">App icon color</string>
+    <string name="foreground_color">Boja pozadine</string>
+    <string name="app_icon_color">Boja ikone aplikacije</string>
     <string name="restore_defaults">Vrati zadano</string>
-    <string name="change_color">Change color</string>
+    <string name="change_color">Promijeni boju</string>
     <string name="theme">Tema</string>
-    <string name="changing_color_description">Promjenom boje, prelazi se na Prilagođenu temu</string>
+    <string name="changing_color_description">Promijenom boje, prelazi se na Prilagođenu temu</string>
     <string name="save">Spremi</string>
     <string name="discard">Odbaci</string>
     <string name="undo_changes">Poništi promjene</string>
@@ -176,7 +176,7 @@
     <string name="share_colors_success">Uspješno ažurirane boje. Nova tema pod nazivom \'Shared\' je dodana, molimo koristite ju za ažuriranje svih boja u aplikaciji u budućnosti.</string>
     <string name="purchase_thank_you">
         <![CDATA[
-            Please purchase <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> to unlock this function and support the development. Thanks!
+            Molimo kupite <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> za otključavanje ove funkcije i podršku razvoju. Hvala!
         ]]>
     </string>
 
@@ -185,7 +185,7 @@
     <string name="dark_theme">Tamna</string>
     <string name="solarized">Solarizirana</string>
     <string name="dark_red">Tamno crvena</string>
-    <string name="black_white">Black &amp; White</string>
+    <string name="black_white">Crno &amp; Bijelo</string>
     <string name="custom">Prilagođena</string>
     <string name="shared">Dijeljena</string>
 
@@ -207,9 +207,9 @@
     <string name="temporarily_show_hidden">Privremeno prikaži skriveno</string>
     <string name="stop_showing_hidden">Zaustavi prikazivanje skrivenih stavki</string>
     <string name="maximum_share_reached">Nije moguće dijeliti ovoliko stavki odjednom</string>
-    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
-    <string name="undo">Undo</string>
-    <string name="redo">Redo</string>
+    <string name="empty_and_disable_recycle_bin">Ispraznite i onemogućite koš za smeće</string>
+    <string name="undo">Poništi promjenu</string>
+    <string name="redo">Ponovi promjenu</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortiraj po</string>
@@ -219,24 +219,24 @@
     <string name="date_taken">Datum stvaranja</string>
     <string name="title">Naslov</string>
     <string name="filename">Naziv datoteke</string>
-    <string name="extension">Ekstenzija</string>
+    <string name="extension">Tip datoteke</string>
     <string name="ascending">Uzlazno</string>
     <string name="descending">Silazno</string>
     <string name="use_for_this_folder">Koristi samo za ovaj direktorij</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Jeste li sigurni da želite nastaviti s brisanjem?</string>
-    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Are you sure you want to move %s into the Recycle Bin?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
-    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
-    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
+    <string name="deletion_confirmation">Jeste li sigurni da želite izbrisati %s?</string>    <!-- Are you sure you want to delete 5 items? -->
+    <string name="move_to_recycle_bin_confirmation">Jeste li sigurni da se želite premjestiti %s u koš za smeće?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
+    <string name="are_you_sure_delete">Jeste li sigurni da želite izbrisati ovu stavku?</string>
+    <string name="are_you_sure_recycle_bin">Jeste li sigurni da želite premjestiti ovu stavku u koš za smeće?</string>
     <string name="do_not_ask_again">Ne pitaj me više u ovoj sesiji</string>
     <string name="yes">Da</string>
     <string name="no">Ne</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">WARNING: You are deleting a folder</item>
-        <item quantity="other">WARNING: You are deleting %d folders</item>
+        <item quantity="one">UPOZORENJE: Brišete mapu</item>
+        <item quantity="other">UPOZORENJE: Brišete %d mapa</item>
     </plurals>
 
     <!-- Password protection -->
@@ -260,13 +260,13 @@
     <string name="fingerprint_setup_successfully">Uspješno postavljanje zaštite. Molimo reinstalirajte aplikaciju u slučaju problema s resetiranjem.</string>
 
     <!-- Times -->
-    <string name="yesterday">Yesterday</string>
-    <string name="today">Today</string>
-    <string name="tomorrow">Tomorrow</string>
-    <string name="seconds_raw">seconds</string>
-    <string name="minutes_raw">minutes</string>
-    <string name="hours_raw">hours</string>
-    <string name="days_raw">days</string>
+    <string name="yesterday">Jučer</string>
+    <string name="today">Danas</string>
+    <string name="tomorrow">Sutra</string>
+    <string name="seconds_raw">sekunde</string>
+    <string name="minutes_raw">minute</string>
+    <string name="hours_raw">sati</string>
+    <string name="days_raw">dani</string>
 
     <plurals name="seconds">
         <item quantity="one">%d sekunda</item>
@@ -284,104 +284,104 @@
         <item quantity="other">%d sati</item>
     </plurals>
     <plurals name="days">
-        <item quantity="one">%d day</item>
-        <item quantity="few">%d days</item>
-        <item quantity="other">%d days</item>
+        <item quantity="one">%d dan</item>
+        <item quantity="few">%d dana</item>
+        <item quantity="other">%d dani</item>
     </plurals>
     <plurals name="weeks">
-        <item quantity="one">%d week</item>
-        <item quantity="few">%d weeks</item>
-        <item quantity="other">%d weeks</item>
+        <item quantity="one">%d tjedan</item>
+        <item quantity="few">%d tjedna</item>
+        <item quantity="other">%d tjedana</item>
     </plurals>
     <plurals name="months">
-        <item quantity="one">%d month</item>
-        <item quantity="few">%d months</item>
-        <item quantity="other">%d months</item>
+        <item quantity="one">%d mjesec</item>
+        <item quantity="few">%d mjeseca</item>
+        <item quantity="other">%d mjeseci</item>
     </plurals>
     <plurals name="years">
-        <item quantity="one">%d year</item>
-        <item quantity="few">%d years</item>
-        <item quantity="other">%d years</item>
+        <item quantity="one">%d godina</item>
+        <item quantity="few">%d godine</item>
+        <item quantity="other">%d godina</item>
     </plurals>
 
     <!-- For example: I will be there in 5 minutes -->
     <plurals name="in_seconds">
-        <item quantity="one">%d second</item>
-        <item quantity="few">%d seconds</item>
-        <item quantity="other">%d seconds</item>
+        <item quantity="one">%d sekundu</item>
+        <item quantity="few">%d sekundi</item>
+        <item quantity="other">%d sekunde</item>
     </plurals>
     <plurals name="in_minutes">
-        <item quantity="one">%d minute</item>
-        <item quantity="few">%d minutes</item>
-        <item quantity="other">%d minutes</item>
+        <item quantity="one">%d minutu</item>
+        <item quantity="few">%d minuta</item>
+        <item quantity="other">%d minute</item>
     </plurals>
     <plurals name="in_hours">
-        <item quantity="one">%d hour</item>
-        <item quantity="few">%d hours</item>
-        <item quantity="other">%d hours</item>
+        <item quantity="one">%d sat</item>
+        <item quantity="few">%d sati</item>
+        <item quantity="other">%d sate</item>
     </plurals>
 
     <!-- For example: Event reminder: 3 minutes before -->
     <plurals name="seconds_before">
-        <item quantity="one">%d second before</item>
-        <item quantity="few">%d seconds before</item>
-        <item quantity="other">%d seconds before</item>
+        <item quantity="one">%d sekunda prije</item>
+        <item quantity="few">%d sekundi prije</item>
+        <item quantity="other">%d sekunde prije</item>
     </plurals>
     <plurals name="minutes_before">
-        <item quantity="one">%d minute before</item>
-        <item quantity="few">%d minutes before</item>
-        <item quantity="other">%d minutes before</item>
+        <item quantity="one">%d minuta prije</item>
+        <item quantity="few">%d minuta prije</item>
+        <item quantity="other">%d minute prije</item>
     </plurals>
     <plurals name="hours_before">
-        <item quantity="one">%d hour before</item>
-        <item quantity="few">%d hours before</item>
-        <item quantity="other">%d hours before</item>
+        <item quantity="one">%d sat prije</item>
+        <item quantity="few">%d sati prije</item>
+        <item quantity="other">%d sate prije</item>
     </plurals>
     <plurals name="days_before">
-        <item quantity="one">%d day before</item>
-        <item quantity="few">%d days before</item>
-        <item quantity="other">%d days before</item>
+        <item quantity="one">%d dan prije</item>
+        <item quantity="few">%d dana prije</item>
+        <item quantity="other">%d dane prije</item>
     </plurals>
 
     <!-- For example: Postpone reminder by 3 minutes -->
     <plurals name="by_seconds">
-        <item quantity="one">%d second</item>
-        <item quantity="few">%d seconds</item>
-        <item quantity="other">%d seconds</item>
+        <item quantity="one">%d sekundu</item>
+        <item quantity="few">%d sekundi</item>
+        <item quantity="other">%d sekunde</item>
     </plurals>
     <plurals name="by_minutes">
-        <item quantity="one">%d minute</item>
-        <item quantity="few">%d minutes</item>
-        <item quantity="other">%d minutes</item>
+        <item quantity="one">%d minutu</item>
+        <item quantity="few">%d minuta</item>
+        <item quantity="other">%d minute</item>
     </plurals>
     <plurals name="by_hours">
-        <item quantity="one">%d hour</item>
-        <item quantity="few">%d hours</item>
-        <item quantity="other">%d hours</item>
+        <item quantity="one">%d sat</item>
+        <item quantity="few">%d sati</item>
+        <item quantity="other">%d sate</item>
     </plurals>
 
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
-    <string name="alarm_goes_off_in">Time remaining till the alarm goes off:\n%s</string>
-    <string name="reminder_triggers_in">Time remaining till the reminder triggers:\n%s</string>
-    <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
-    <string name="reminder_warning">Please make sure the reminders work properly before relying on them. They could misbehave due to system restrictions related to battery saving.</string>
+    <string name="alarm_goes_off_in">Preostaje vrijeme do pokretanja alarma:\n%s</string>
+    <string name="reminder_triggers_in">Preostalo vrijeme do pokretanja podsjetnika:\n%s</string>
+    <string name="alarm_warning">Provjerite je li alarm ispravno funkcionirao prije nego što se oslonite na njega. Moglo bi se pogoršati zbog ograničenja sustava vezanih uz štednju baterije.</string>
+    <string name="reminder_warning">Pazite da podsjetnici ispravno rade prije nego što se oslonite na njih. Moglo bi se pogoršati zbog ograničenja sustava vezanih uz štednju baterije.</string>
 
     <!-- Alarms -->
     <string name="alarm">Alarm</string>
-    <string name="snooze">Snooze</string>
-    <string name="dismiss">Dismiss</string>
-    <string name="no_reminder">No reminder</string>
-    <string name="at_start">At start</string>
-    <string name="system_sounds">System sounds</string>
-    <string name="your_sounds">Your sounds</string>
-    <string name="add_new_sound">Add a new sound</string>
-    <string name="no_sound">No sound</string>
+    <string name="snooze">Odgodi</string>
+    <string name="dismiss">Odbaci</string>
+    <string name="no_reminder">Nema podsjetnika</string>
+    <string name="at_start">Na početku</string>
+    <string name="system_sounds">Zvukovi sustava</string>
+    <string name="your_sounds">Vaši zvukovi</string>
+    <string name="add_new_sound">Dodaj novi zvuk</string>
+    <string name="no_sound">Nema zvuka</string>
 
     <!-- Settings -->
     <string name="settings">Postavke</string>
-    <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
+    <string name="purchase_simple_thank_you">Kupite Jednostavno Hvala</string>
     <string name="customize_colors">Prilagodi boje</string>
-    <string name="customize_widget_colors">Customize widget colors</string>
+    <string name="customize_widget_colors">Prilagodi boje widgeta</string>
     <string name="use_english_language">Koristi Engleski jezik</string>
     <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
     <string name="show_hidden_items">Show hidden items</string>
