updating some greek October related strings

--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -433,7 +433,7 @@
     <string name="july">Ιούλιος</string>
     <string name="august">Αύγουστος</string>
     <string name="september">Σεπτέμβριος</string>
-    <string name="october">Οκτώμβριος</string>
+    <string name="october">Οκτώβριος</string>
     <string name="november">Νοέμβριος</string>
     <string name="december">Δεκέμβριος</string>
 
@@ -447,7 +447,7 @@
     <string name="in_july">τον Ιούλιο</string>
     <string name="in_august">τον Αύγουστο</string>
     <string name="in_september">τον Σεπτέμβριο</string>
-    <string name="in_october">τον Οκτώμβριο</string>
+    <string name="in_october">τον Οκτώβριο</string>
     <string name="in_november">τον Νοέμβριο</string>
     <string name="in_december">τον Δεκέμβριο</string>
 
